# form-bench

./: .cspell.json  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run-compare.sh
scripts/: bench-summary.py  plot-compare.py
tests/chromatic/: chromatic.frm  conf.sh
tests/color/: color.frm  conf.sh
tests/fmft/: conf.sh  fmft.frm
tests/forcer/: conf.sh  forcer.frm
tests/forcer-exp/: conf.sh  forcer-exp.frm
tests/hyperform/: conf.sh  hyperform.frm
tests/hyperform/HyperFORM/: README.md
tests/hyperform/HyperFORM/check/: 1302.4379.frm  HypApplyChenWu.frm  HypArgsToRatFunc.frm  HypAutoRegularize.frm  HypChangeFuncHeadForGivenWordLengthAndVarDependence.frm  HypChangeFuncHeadForSameArgFuncs.frm  HypChangeFunctionHeadForVarDependentInstances.frm  HypCheckForZeroCoeffs.frm  HypCollectHlogsForFibrationBasis.frm  HypConvertDetailedRatFuncs.frm  HypCreateFunctionExpressionWithExtras.frm  HypCreateRatFuncArgsInVar.frm  HypDecomposeWRTvar.frm  HypDetermineMinAndMaxFunctionIndices.frm  HypDetermineZeroLimitsForFibrationBasis.frm  HypDiffLogDiffs.frm  HypDifferentiateHlogsAtLevel.frm  HypDissectArg.frm  (+86 more)
tests/mbox1l/: conf.sh
tests/minceex/: conf.sh
tests/mincer/: conf.sh  mincer.frm
tests/mzv-dm/: conf.sh  hexall.h  mzv-dm.frm
tests/mzv-dm/ref/: hexall-ref-2.h  hexall-ref-3.h  hexall-ref-4.h  hexall-ref-5.h  hexall-ref-6.h  hexall-ref-7.h  hexall-ref-8.h
tests/sort-disk/: conf.sh  sort-disk.frm
tests/sort-large/: conf.sh  sort-large.frm  sort-test.h
tests/sort-small/: conf.sh  sort-small.frm
tests/trace/: conf.sh
(+27 files in other folders)
